Increase z-index of fixed element to 3

--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ html.ufo-on .ufo.live { opacity: 1; }
     inset: 0;
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: 3;
     display: block;
 }
 
